Updated the store update endpoint
