# swagger.yaml
@@ -410,7 +410,7 @@ paths:
        description: "ID of store to return"
        required: true
        type: "string"
-#       format: "int64"
+       format: "int64"
      responses:
        "200":
          description: "Successful operation"
@@ -420,41 +420,41 @@ paths:
          description: "Invalid ID supplied"
        "404":
          description: "Store not found"
-#  /store/update/{storeId}:
-#    put:
-#      tags:
-#      - "Store"
-#      summary: "Update an existing Store"
-#      description: ""
-#      operationId: "updateStore"
-#      consumes:
-#      - "application/json"
-#      produces:
-#      - "application/json"
-#      parameters:
-#      - name: "storeId"
-#        in: "path"
-#        description: "ID of store to return"
-#        required: true
-#        type: "integer"
-#        format: "int64"
-#      - in: "body"
-#        name: "body"
-#        description: "Store object that needs to be updated"
-#        required: true
-#        schema:
-#          $ref: "#/definitions/Store"
-#      responses:
-#        "200":
-#          description: "Successful operation"
-#          schema:
-#            $ref: "#/definitions/Store"
-#        "400":
-#          description: "Invalid ID supplied"
-#        "404":
-#          description: "Store not found"
-#        "405":
-#          description: "Validation exception"
+  /store/update/{storeId}:
+    put:
+      tags:
+      - "Store"
+      summary: "Update an existing store"
+      description: ""
+      operationId: "endpoints.store.update_store.update"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "storeId"
+        in: "path"
+        description: "ID of store to return"
+        required: true
+        type: "string"
+          #format: "int64"
+      - in: "body"
+        name: "body"
+        description: "Store object that needs to be updated"
+        required: true
+        schema:
+          $ref: "#/definitions/Store"
+      responses:
+        "200":
+          description: "Successful operation"
+          schema:
+            $ref: "#/definitions/Store"
+        "400":
+          description: "Invalid ID supplied"
+        "404":
+          description: "Store not found"
+        "405":
+          description: "Validation exception"
 
   /store/delete/{storeId}:
     delete:
@@ -471,7 +471,7 @@ paths:
         description: "Store id to delete"
         required: true
         type: "string"
-#        format: "int64"
+        format: "int64"
       responses:
         "200":
           description: "Successful operation"
